# paranoia-local

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: orientation_reuse_plan.md
src/paranoia_local/: __init__.py  cli.py  config.py  engines.py  handlers.py  logs.py  orientation.py  prompts.py  runner.py  server.py  worktree.py
tests/: conftest.py  test_config_logs.py  test_converge.py  test_engines.py  test_handlers.py  test_instrumentation.py  test_integration.py  test_orientation.py  test_packet.py  test_progress.py  test_prompts.py  test_server.py  test_snapshot.py  test_worktree.py
