[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paranoia-local"
version = "0.1.0"
description = "A local MCP server for cross-agent adversarial code review — Claude Code and Codex CLI critique each other's work over their own subscriptions, with full repo access."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrew Hillel" }]
keywords = ["mcp", "code-review", "claude-code", "codex", "adversarial-review"]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
paranoia-local = "paranoia_local.cli:main"

[project.urls]
Homepage = "https://github.com/subvertnormality/paranoia-local"
Source = "https://github.com/subvertnormality/paranoia-local"

[tool.hatch.build.targets.wheel]
packages = ["src/paranoia_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
